@@ -1,0 +1,27 @@
+site_info_1:
+  # This is the default section
+  BIRD_REPO_PATH: MOCK_BIRD_REPO
+  BIRD_FAMILY_REPO_PATH: MOCK_BIRD_FAMILY_REPO
+  BIRD_CHEM_COMP_REPO_PATH: MOCK_BIRD_CC_REPO
+  CHEM_COMP_REPO_PATH: MOCK_CHEM_COMP_REPO
+  PDBX_REPO_PATH: MOCK_PDBX_SANDBOX
+  DICT_METHOD_HELPER_MODULE: rcsb.utils.config.ExampleHelper  # this is a helper method
+  #
+  CONFIG_APPEND_LOCATOR_PATHS:
+    - https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/master/test_files/setup-example-append-1.yml
+    - https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/master/test_files/setup-example-append-2.yml
+#
+Section1:
+  # this is section 1
+  BIRD_REPO_PATH: MOCK_BIRD_REPO
+  BIRD_FAMILY_REPO_PATH: MOCK_BIRD_FAMILY_REPO
+  BIRD_CHEM_COMP_REPO_PATH: MOCK_BIRD_CC_REPO
+  CHEM_COMP_REPO_PATH: MOCK_CHEM_COMP_REPO
+  PDBX_REPO_PATH: MOCK_PDBX_SANDBOX
+  DICT_METHOD_HELPER_MODULE: rcsb.utils.config.ExampleHelper # this is another helper method
+  ENV_OPTION_A: TEST_ENV_VAR
+  CONFIG_SUPPORT_TOKEN: CONFIG_SUPPORT_TOKEN_ENV
+  SECRET_TEST_USERNAME: /QtKzWZfOPukQZ6/XSwb6Ahp28Bj94XONIKc2bYTdgAYYPTadTKSZY7tXfa1zZb9
+  SECRET_TEST_PASSWORD: ZQcr15qf/5sH189l3gUNfExPk8Ha95DunGsKNEMedAG+5DJgl48nn3cr+aSGOmcjeiJZlvk5coY=
+  _TEST_USERNAME: /QtKzWZfOPukQZ6/XSwb6Ahp28Bj94XONIKc2bYTdgAYYPTadTKSZY7tXfa1zZb9
+  _TEST_PASSWORD: ZQcr15qf/5sH189l3gUNfExPk8Ha95DunGsKNEMedAG+5DJgl48nn3cr+aSGOmcjeiJZlvk5coY=
